--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: flutter_selectable_text
 description: A Selectable Text widget for Flutter.
 version: 0.0.1
 author: Danny Valente <valente.danny@gmail.com>
-homepage:
+homepage: https://github.com/dannyvalente/flutter_selectable_text
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
