--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,6 +6,7 @@ homepage: https://github.com/dannyvalente/flutter_selectable_text
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
+  flutter: ">=1.2.1 <2.0.0"
 
 dependencies:
   flutter:
