Updating package to 0.1.0, added an example and made the flutter dependency tight on 1.2.1 because it is only compatible with that version.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,12 @@
 name: flutter_selectable_text
 description: A Selectable Text widget for Flutter.
-version: 0.0.2
+version: 0.1.0
 author: Danny Valente <valente.danny@gmail.com>
 homepage: https://github.com/dannyvalente/flutter_selectable_text
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
-  flutter: ">=1.2.1 <2.0.0"
+  flutter: "1.2.1"
 
 dependencies:
   flutter:
